basic app layout is done

--- a/index.html
+++ b/index.html
@@ -11,22 +11,21 @@
   <body class="page">    
     <header class='header'>
       <h1>Battleships</h1>       
-    </header>
-    <div class='score'></div>
-    <div class='timer'></div>
-    <main class='main'>
-    </main>
-    <aside class="sidebar">
-    </aside>
-    <footer class='footer'>
-    </footer>
+    </header>   
+    <div class='player-1 board'></div>
+    <div class='player-1 fleet'></div>
+    <div class='player-1 timer'></div>
+    <div class='player-2 board'></div>
+    <div class='player-2 fleet'></div>
+    <div class='player-2 timer'></div>
+    <footer class='footer'></footer>
 
-<!--     <script src="helper.js"></script>
+    <!-- <script src="helper.js"></script>
     <script src="geometry.js"></script>
     <script src="Tetris.js"></script>
-    <script src="TetrisFactory.js"></script>
+    <script src="TetrisFactory.js"></script> -->
     <script src="Canvas.js"></script>
-    <script src="Score.js"></script>
+   <!--  <script src="Score.js"></script>
     <script src="Timer.js"></script> -->
     <script src="script.js"></script>
   </body>
