Grid constructor added in rudimentary form: BattleField construcor as an extension of Grid

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
     <script src="geometry.js"></script>
     <script src="Tetris.js"></script>
     <script src="TetrisFactory.js"></script> -->
+    <script src="Grid.js"></script>
+    <script src="Battlefield.js"></script>
     <script src="Canvas.js"></script>
    <!--  <script src="Score.js"></script>
     <script src="Timer.js"></script> -->
