Adding listeners moved to Canvas.prototype; Battleship decoupled from scritp and put to separate file; helper.js functions added

--- a/index.html
+++ b/index.html
@@ -20,13 +20,14 @@
     <div class='player-2 timer'></div>
     <footer class='footer'></footer>
 
-    <!-- <script src="helper.js"></script>
-    <script src="geometry.js"></script>
-    <script src="Tetris.js"></script>
-    <script src="TetrisFactory.js"></script> -->
+    <script src="helper.js"></script>
+    <!-- <script src="geometry.js"></script> -->
+    <!-- <script src="Tetris.js"></script> -->
+    <!-- <script src="TetrisFactory.js"></script> -->
     <script src="Grid.js"></script>
+    <script src="Canvas.js"></script>    
     <script src="Battlefield.js"></script>
-    <script src="Canvas.js"></script>
+    
    <!--  <script src="Score.js"></script>
     <script src="Timer.js"></script> -->
     <script src="script.js"></script>
