GridOnCanvas added; drawing on canvas is performed via methods on GridField prototype;

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     <!-- <script src="Tetris.js"></script> -->
     <!-- <script src="TetrisFactory.js"></script> -->
     <script src="Grid.js"></script>
-    <script src="Canvas.js"></script>    
+    <script src="Canvas.js"></script>
+    <script src="GridOnCanvas.js"></script>    
     <script src="Battlefield.js"></script>
     
    <!--  <script src="Score.js"></script>
