GridField constructor moved to separate file; basic options for rendering the fields added

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <!-- <script src="geometry.js"></script> -->
     <!-- <script src="Tetris.js"></script> -->
     <!-- <script src="TetrisFactory.js"></script> -->
+     <script src="GridField.js"></script>
     <script src="Grid.js"></script>
     <script src="Canvas.js"></script>
     <script src="GridOnCanvas.js"></script>    
