--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
      <script src="GridField.js"></script>
     <script src="Grid.js"></script>
     <script src="Canvas.js"></script>
+    <script src="Game.js"></script>
     <script src="GridOnCanvas.js"></script>    
     <script src="Battlefield.js"></script>
     
