--- a/public/index.html
+++ b/public/index.html
@@ -5,18 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Express Boilerplate</title>
     <meta name="" content="...">
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/grid-style.css">
+    <link rel="stylesheet" href="styles/font-style.css">
   </head>
   <body class="page">
     <header class='header'>
       <h1>Express Boilerplate</h1>
     </header>
-    <main class='main'>
-    </main>
-    <aside class="sidebar">
-    </aside>
-    <footer class='footer'>
+      <div class='left-top'>
+        <p>Left Top</p>
+      </div>
+      <div class='right-top'>
+        <p>Right Top</p>
+      </div>
+      <div class='left-bottom'>
+          <p>Left Bottom</p>
+      </div>
+      <div class='right-bottom'>
+          <p>Right Bottom</p>
+      </div>
+    <footer class='footer'>It will save you a lot of time...
     </footer>
-    <script src="scripts/index.js"></script>
+    <script src="bundle.js"></script>
   </body>
 </html>
