--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Express Boilerplate</title>
+    <title>Mazes Generator</title>
     <meta name="" content="...">
     <link rel="stylesheet" href="styles/grid-style.css">
     <link rel="stylesheet" href="styles/font-style.css">
   </head>
   <body class="page">
     <header class='header'>
-      <h1>Express Boilerplate</h1>
+      <h1>Mazes Generator</h1>
     </header>
       <div class='left-top'>
         <p>Left Top</p>
